--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ background-position: 0 0;
 #contact .img{
 border: 4px #FFF solid;
 }
-#showcase nav a.selected{
+#showcase nav a{
 border: 1px solid #E3E9F0;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -764,6 +764,7 @@ justify-content: center;
             </nav>
         </div>
         <!-- resume ends -->
+
 </div>  
 <!-- body end -->
 <div id="contact"><div>
