--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Peter Roper Product Designer | Tokyo Japan</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
+<meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
