--- a/index.html
+++ b/index.html
@@ -758,10 +758,10 @@ justify-content: center;
         <!-- resume -->
         <div id="resume" >
             <h3>Resume</h3>
-            <p>My resume is available in two formats: PDF and Google Doc. The PDF version incorporates design composition to enhance visual appeal, while the Google Doc format is designed with accessibility needs in mind. Please select the option that best suits your requirements.</p>
+            <p>My resume can be downloaded in PDF format. Please feel free to contact me if alternative doc or styling formats are required.</p>
             <nav>
                 <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume07072023.pdf" target="_blank" title="PDF Resume"><span class="icn" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/PDF_24.png);"></span>PDF Resume</a>
-                <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume07072023.doc" target="_blank" title="Document Resume"><span class="icn" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/Google_Docs_24.png);"></span>Document Resume : Coming Soon</a>
+                <!--a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume07072023.doc" target="_blank" title="Document Resume"><span class="icn" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/Google_Docs_24.png);"></span>Document Resume : Coming Soon</a-->
             </nav>
         </div>
         <!-- resume ends -->
