--- a/index.html
+++ b/index.html
@@ -732,15 +732,22 @@ justify-content: center;
                 <div class="scrollable">
                     <div id="showcase1" class="tab-container tab-selected">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
-                    <div>
-                        <h3>Football at your finger tips</h3>
+                    <div>     
                         <p class="l">Pulse Football is a one stop indepth app for football fans who need more than just the news.</p>
-                        <p>Many football fans obsess over the tiniest piece of information. However finding this information involves traversing numerous platforms and media types to extract the truth.</p>
-                        <p>With the onset of AI various tasks and aggregations can be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
+                        <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
+                        <p class="l">Product Overview</p>
+                        <p>After brainstorming with a fellow UX designer and football fan, an outline for a new football product was found.</p>
+                        <ul>
+                            <li>All in one application: tweets, fan analysis, player data, video shorts.</li>
+                            <li>Reduce scroll and enable user to process top level information easily.</li>
+                            <li>Enable user to refine information based on their interests.</li>
+                            <li>Implement interaction and transitions to create a seemless and intuitive UX.</li>
+                        </ul>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     <div class="hypothesis">
-                        <p class="l">text goes here</p>
+                        <h3>Football at your finger tips</h3>
+                        <p>With the onset of AI, specific tasks could now become automated and combined with  Information aggregation ca be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
