--- a/index.html
+++ b/index.html
@@ -746,8 +746,10 @@ justify-content: center;
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     <div class="hypothesis">
-                        <h3>Football at your finger tips</h3>
-                        <p>With the onset of AI, specific tasks could now become automated and combined with  Information aggregation ca be performed to optimise and present information simply and in one location. Allowing the pulse football user to tailor what information they require.</p>
+                        <h3>Football at your finger tip/s</h3>
+                        <p>Over the last 7-8 years I have noticed football related products becoming more sophisticated. Notable applications would include Fantasy Premier League, Transfermarkt and One Football.</p>
+                        <p>However despite One Football pushing new boundaries, reporting on football still feels like it is stuck in an old media format with information conveyed in multiple articles.</p>
+                        <p>With the onset of AI, this information can now be aggregated and paired with other related information to user seeks. Analysis and Data can also easily be applied to give the user an all in one football experience.</p>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
