--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ justify-content: center;
                     <div id="showcase1" class="tab-container tab-selected">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                     <div>     
-                        <p class="l">Pulse Football is a one stop indepth app for football fans who need more than just the news.</p>
+                        <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
                         <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
                         <p class="l">Product Overview</p>
                         <p>After brainstorming with a fellow UX designer and football fan, an outline for a new football product was found.</p>
