--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
-p{ font-size: 1.6em; }
+li, p{ font-size: 1.6em; }
 #resume nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 h4 a, p.l span{
 font-size: 1em;
@@ -736,13 +736,12 @@ justify-content: center;
                         <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
                         <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
                         <p class="l">Product Overview</p>
-                        <p>After brainstorming with a fellow UX designer and football fan, an outline for a new football product was found.</p>
-                        <ul>
+                        <ol>
                             <li>All in one application: tweets, fan analysis, player data, video shorts.</li>
                             <li>Reduce scroll and enable user to process top level information easily.</li>
                             <li>Enable user to refine information based on their interests.</li>
                             <li>Implement interaction and transitions to create a seemless and intuitive UX.</li>
-                        </ul>
+                        </ol>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
                     <div class="hypothesis">
