--- a/index.html
+++ b/index.html
@@ -737,10 +737,10 @@ justify-content: center;
                         <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
                         <p class="l">Product Overview</p>
                         <ol>
-                            <li>All in one application: tweets, fan analysis, player data, video shorts.</li>
-                            <li>Reduce scroll and enable user to process top level information easily.</li>
-                            <li>Enable user to refine information based on their interests.</li>
-                            <li>Implement interaction and transitions to create a seemless and intuitive UX.</li>
+                            <li>All in one application: news, analysis & community.</li>
+                            <li>Apply IA to simplify information gathering.</li>
+                            <li>Refine information based on user interests.</li>
+                            <li>Create Seemless UX with interaction and transitions.</li>
                         </ol>
                     </div>
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
