--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ padding-bottom: 4px;
 height: 424px!important;
 }
 #showcase1 div p{
-width: 380px;
+width: 343px;
 }
 #showcase1 img:first-of-type{
     margin-left: -150px;
@@ -713,22 +713,6 @@ justify-content: center;
         </div>
         <!-- posts ends -->
          
-        <div id="sliders">
-            <div id="slidedeck">
-              <h3>Casestudies <a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank">Figma Preview</a></h3>
-                <div class="slider">
-                <ul>
-                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></span></li>
-                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.jpg);"></span></li>
-                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.jpg);"></span></li>
-                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.jpg);"></span></li>
-                    <li><span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.jpg);"></span></li>
-                </ul>
-                </div>
-            </div>
-            <!-- casestudies ends -->
-        </div>
-        <!-- sliders ends -->
 
         <!-- showcase -->
         <div id="showcase" >
@@ -772,6 +756,23 @@ justify-content: center;
                 <p class="web-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
         </div>
         <!-- showcase ends -->
+
+        <div id="sliders">
+            <div id="slidedeck">
+              <h3>About Me <a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank">Figma Preview</a></h3>
+                <div class="slider">
+                <ul>
+                    <li><a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank" class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.jpg);"></a></li>
+                    <li><a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank" class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.jpg);"></a></li>
+                    <li><a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank" class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.jpg);"></a></li>
+                    <li><a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank" class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.jpg);"></a></li>
+                    <li><a href="https://www.figma.com/proto/Tinw42b8dPcKnoTytk0bi2/Peter-Roper-Slide-Deck?page-id=43%3A36773&type=design&node-id=43-37238&viewport=1135%2C459%2C0.25&scaling=contain&starting-point-node-id=43%3A37238&mode=design" title="Figma Casestudy" target="_blank" class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.jpg);"></a></li>
+                </ul>
+                </div>
+            </div>
+            <!-- casestudies ends -->
+        </div>
+        <!-- sliders ends -->
 
         <!-- resume -->
         <div id="resume" >
