--- a/index.html
+++ b/index.html
@@ -569,6 +569,12 @@ margin-bottom: 12px;
 .header > div{
 background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53, 103, 115, 0.00) 100%);
 }
+h3{
+    clear: both;
+}
+h3 a{
+float: right;
+}
 /*/////////////////////////////////////////////////////////////*/
 .web-only{
 display: none;
