--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@ h3{
     clear: both;
 }
 h3 a{
+padding: 4px 24px 0 0;
 float: right;
 }
 /*/////////////////////////////////////////////////////////////*/
