--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Peter Roper Product Designer | Tokyo Japan</title>
+<title>Peter Roper Product Designer | Tokyo Japan, UX, UI, Visual Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
