--- a/test123.html
+++ b/test123.html
@@ -756,8 +756,15 @@ justify-content: center;
                     <div id="showcase2" class="tab-container">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                         <div>
-                            <h4>Every Adventure</h4>
-                            <p>I created xxx for and adventure sports and event organisation over a 10 year period.</p>
+                            <p class="l">Geronigo is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
+                            <p>With fresh eyes and a new perspective gained while working as a UX designer I will build on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
+                            <p class="l">Product Overview</p>
+                            <ol>
+                                <li>All in one application: news, analysis & community.</li>
+                                <li>Apply IA to simplify information gathering.</li>
+                                <li>Refine information based on user interests.</li>
+                                <li>Create Seemless UX with interaction and transitions.</li>
+                            </ol>
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg" />
                     </div>
