--- a/test123.html
+++ b/test123.html
@@ -758,12 +758,11 @@ justify-content: center;
                         <div>
                             <p class="l">Geronigo is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
                             <p>With fresh eyes and a new perspective gained while working as a UX designer I will build on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
-                            <p class="l">Product Overview</p>
+                            <p class="l">Objectives</p>
                             <ol>
-                                <li>All in one application: news, analysis & community.</li>
-                                <li>Apply IA to simplify information gathering.</li>
-                                <li>Refine information based on user interests.</li>
-                                <li>Create Seemless UX with interaction and transitions.</li>
+                                <li>Refine existing IA to improve findability and streamline user journeys.</li>
+                                <li>Apply universal UI patterns for an intuitive UX.</li>
+                                <li>Identify areas for User Research & Testing.</li>
                             </ol>
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg" />
