--- a/test123.html
+++ b/test123.html
@@ -212,11 +212,11 @@ background: linear-gradient(90deg, #21134E 0%, #000 100%);
 background: #000;
 }
 #showcase2{
-color: #FFF;
-background-color: #E88D0C;
+color: #222;
+background-color: #EEAD50;
 }
 #showcase2 div.hypothesis{
-background-color: #E9625F;
+background-color: #EF8E8C;
 }
 .header{
 background-color: #346672;
