--- a/test123.html
+++ b/test123.html
@@ -641,6 +641,7 @@ padding-bottom: 4px;
 #showcase .scrollable{
 height: 424px!important;
 }
+#showcase2 div p,
 #showcase1 div p{
 width: 343px;
 }
