--- a/test123.html
+++ b/test123.html
@@ -672,7 +672,7 @@ justify-content: center;
 </head>
 <body>
 <div class="header"><div>
-    <p class="mobile-only">Full Information in Desktop Browsing</p>
+    <p class="mobile-only">Full Information when Desktop Browsing</p>
     <div>
         <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar2.png);"></span>
         <h1>Peter Roper</h1>
@@ -690,7 +690,7 @@ justify-content: center;
          
         <!-- posts start -->
         <div id="posts">
-            <h3>Design Journal <a href="https://peteroper.notion.site/About-this-Design-Journal-afb8ecb77db7481880f3e211a3e8c2b9" title="Notion Design Journal" target="_blank">Notion Introduction</a></h3>
+            <h3>Design Journal</h3>
             <nav class="tab-menu">
                 <a href="#posts1" class="selected">1</a>
                 <a href="#posts2">2</a>
