--- a/test123.html
+++ b/test123.html
@@ -442,10 +442,10 @@ display: none!important;
 .tab-container.tab-selected{
 display: flex!important;
 }
-.tab-container div{
+#showcase .tab-container div{
 padding: 40px;
 }
-.tab-container div p{
+#showcase .tab-container div p{
 width: 440px;
 margin-bottom: 12px;
 }
