--- a/test123.html
+++ b/test123.html
@@ -353,7 +353,7 @@ align-self: stretch;
 width: 20px;
 height: 20px;
 }
-#posts .tabs-container.tab-container.tab-selected{
+#posts .tab-container.tab-selected{
     flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
