--- a/test123.html
+++ b/test123.html
@@ -756,7 +756,7 @@ justify-content: center;
                         
                         <div>
                             <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Promoting Engagement</a></h4>
-                            <p>Outlining the importance of Visual Hierachy and Engagement techniques.</p>
+                            <p>Visual Hierachy principle and Engagement techniques.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
@@ -767,7 +767,7 @@ justify-content: center;
                     <div class="contents">
                         <div>
                             <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="https://peteroper.notion.site/Advocating-a-Design-Culture-1770b2d30df8473d92cc6fbf4004f2b7?pvs=4" target="_blank">Advocating for a Design Culture</a></h4>
-                            <p>Outlining some thoughts regarding team dynamics and growth.</p>
+                            <p>Thoughts regarding team dynamics and growth.</p>
                         </div> 
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
