--- a/test123.html
+++ b/test123.html
@@ -193,6 +193,7 @@ background-position: 50%;
 body{
 background-color: #FFF;
 }
+#posts nav a.selected,
 #showcase nav a.selected,
 #showcase .scrollable,
 #posts .img, 
@@ -237,6 +238,7 @@ background-position: 0 0;
 #contact .img{
 border: 4px #FFF solid;
 }
+#posts nav a,
 #showcase nav a{
 border: 1px solid #E3E9F0;
 }
@@ -355,6 +357,18 @@ height: 20px;
 }
 #posts .tab-container.tab-selected{
     flex-direction: column;
+}
+#posts nav{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#posts nav a{
+    display: inline-block;
+    width: 36px;
+    line-height: 36px;
+    text-align: center;
+    margin: 0 0 0 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SLIDER */
