--- a/test123.html
+++ b/test123.html
@@ -275,6 +275,7 @@ border-radius: 0 16px 16px 0;
 -webkit-border-radius: 0 16px 16px 0;
   -moz-border-radius: 0 16px 16px 0;
 }
+#posts nav a,
 #showcase nav a{
 border-radius: 100px;
 -webkit-border-radius: 100px;
