--- a/test123.html
+++ b/test123.html
@@ -316,6 +316,9 @@ margin: 0 0 12px 0;
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
 /*/////////////////////////////////////////////////////////////*/
+#posts{
+    position: relative;
+}
 #posts .post,
 #posts .post > div{
 gap: 24px;
