--- a/test123.html
+++ b/test123.html
@@ -364,7 +364,7 @@ height: 20px;
 }
 #posts nav{
     position: absolute;
-    top: 0;
+    top: -1px;
     right: 0;
 }
 #posts nav a{
@@ -372,7 +372,7 @@ height: 20px;
     width: 36px;
     line-height: 36px;
     text-align: center;
-    margin: 0 0 0 8px;
+    margin: 0 0 0 4px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SLIDER */
@@ -643,6 +643,13 @@ gap: 0;
 }
 #posts .post .icn{
 display: none;
+}
+#posts nav{
+right: 24px;
+}
+#posts nav a{
+width: 28px;
+line-height: 28px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
