--- a/test123.html
+++ b/test123.html
@@ -373,6 +373,7 @@ height: 20px;
     line-height: 36px;
     text-align: center;
     margin: 0 0 0 4px;
+    text-decoration: none;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SLIDER */
