--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ $(document).ready(function(){
 $( ".tab-menu a").on( "click", function() {
     var id = $(this).attr('href');
     var parent = $(this).parents('.tab-block').attr('id');
-    $( ".tab-menu a").removeClass('selected');
+    $("#"+parent+" .tab-menu a").removeClass('selected');
     $(this).addClass('selected');
-    $( ".tab-container").removeClass('tab-selected');
+    $("#"+parent+" .tab-container").removeClass('tab-selected');
     $("#"+parent+" "+id+"").addClass('tab-selected');
     return false;
 });
@@ -782,7 +782,7 @@ justify-content: center;
                     <div class="contents">
                         
                         <div>
-                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Promoting Engagement</a></h4>
+                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Engagement</a></h4>
                             <p>Visual Hierachy principle and Engagement techniques.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
