--- a/test123.html
+++ b/test123.html
@@ -654,7 +654,7 @@ display: none;
 width: 28px;
 line-height: 28px;
 }
-#posts .post-scrollable{
+#posts .posts-scrollable{
 width: 100%;
 height: 204px;
 flex-shrink: 0;
@@ -664,7 +664,7 @@ overflow-y: hidden;
 overflow: -moz-scrollbars-horizontal;
 position: relative;
 }
-#posts .post-scrollable div{
+#posts .posts-scrollable div{
 height: 100%;
 display: flex;
 gap: 16px;
@@ -674,7 +674,7 @@ top: 0;
 left: 0;
 right: 0;
 }
-#posts .post-scrollable .tab-container{
+#posts .posts-scrollable .tab-container{
     width: 298px;
 }
 /*/////////////////////////////////////////////////////////////*/
