--- a/test123.html
+++ b/test123.html
@@ -664,7 +664,7 @@ overflow-y: hidden;
 overflow: -moz-scrollbars-horizontal;
 position: relative;
 }
-#posts .posts-scrollable div{
+#posts .posts-scrollable > div{
 height: 100%;
 display: flex;
 gap: 16px;
