--- a/test123.html
+++ b/test123.html
@@ -677,6 +677,9 @@ right: 0;
 #posts .posts-scrollable .tab-container{
     width: 298px;
 }
+#posts .posts-scrollable .tab-container{
+    display: flex!important;
+}
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
 gap: 12px;
