--- a/test123.html
+++ b/test123.html
@@ -668,7 +668,7 @@ position: relative;
 height: 100%;
 display: flex;
 gap: 16px;
-flex-direction: column;
+flex-direction: row;
 position: absolute;
 top: 0;
 left: 0;
@@ -679,6 +679,7 @@ right: 0;
 }
 #posts .posts-scrollable .tab-container{
     display: flex!important;
+    flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
