--- a/test123.html
+++ b/test123.html
@@ -637,7 +637,6 @@ padding-right: 24px;
 width: 74px;
 }
 #posts .post{
-width: 298px;
 gap: 12px;    
 }
 #posts .post > div{
@@ -646,41 +645,6 @@ gap: 0;
 }
 #posts .post .icn{
 display: none;
-}
-#posts nav{
-right: 24px;
-display: none;
-}
-#posts nav a{
-width: 28px;
-line-height: 28px;
-}
-#posts .posts-scrollable{
-width: 100%;
-height: 204px;
-flex-shrink: 0;
-overflow-x: auto;
-overflow-y: hidden;
--webkit-overflow-scrolling: touch;
-overflow: -moz-scrollbars-horizontal;
-position: relative;
-}
-#posts .posts-scrollable > div{
-height: 100%;
-display: flex;
-gap: 16px;
-flex-direction: row;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-}
-#posts .posts-scrollable .tab-container{
-    width: 298px;
-}
-#posts .posts-scrollable .tab-container{
-    display: flex!important;
-    flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
 #sliders{
@@ -725,6 +689,45 @@ padding: 48px 24px 36px 24px;
 align-items: center;
 justify-content: center;
 }
+}
+/*/////////////////////////////////////////////////////////////*/
+/* MOBILE */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 424px) {
+ #posts .post{
+width: 298px;
+ }
+#posts nav{
+display: none;
+}
+#posts .posts-scrollable{
+width: 100%;
+height: 204px;
+flex-shrink: 0;
+overflow-x: auto;
+overflow-y: hidden;
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
+position: relative;
+}
+#posts .posts-scrollable > div{
+height: 100%;
+display: flex;
+gap: 16px;
+flex-direction: row;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+}
+#posts .posts-scrollable .tab-container{
+    width: 298px;
+}
+#posts .posts-scrollable .tab-container{
+    display: flex!important;
+    flex-direction: column;
+}
+/*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
 </style>
