--- a/test123.html
+++ b/test123.html
@@ -700,6 +700,11 @@ width: 298px;
 #posts nav{
 display: none;
 }
+#posts .post .img, 
+#posts .post img{
+height: 48px;
+padding-bottom: 0;
+}
 #posts .posts-scrollable{
 width: 100%;
 height: 204px;
