--- a/test123.html
+++ b/test123.html
@@ -779,7 +779,7 @@ right: 0;
                     <div class="contents">
                         
                         <div>
-                            <h4><a href="https://peteroper.notion.site/The-Importance-of-a-Design-System-e0d344b59def4fdba7c121ba9c1219c0" title="The Importance of a Design System" target="_blank">Importance of a Design System</a></h4>
+                            <h4><a href="https://peteroper.notion.site/The-Importance-of-a-Design-System-e0d344b59def4fdba7c121ba9c1219c0" title="The Importance of a Design System" target="_blank">Design System Importance</a></h4>
                             <p>Is crucial in developing a consistent app.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
@@ -817,7 +817,7 @@ right: 0;
                     <div class="contents">
                         
                         <div>
-                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Promoting Engagement</a></h4>
+                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Engagement</a></h4>
                             <p>Visual Hierachy principle and Engagement techniques.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
