--- a/test123.html
+++ b/test123.html
@@ -117,7 +117,11 @@ max-width: 724px;
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
-
+@media only screen and (max-width: 424px) {
+*, body, p, b, h1, h2, h3, h4{
+font-size: 8px;
+}
+}
 h1,h2, h3,h4{
 font-weight: 700;
 line-height: 140%; 
@@ -150,10 +154,8 @@ a:hover{
 text-decoration: underline;
 }
 @media only screen and (max-width: 424px) {
-*, body, p, b, h1, h2, h3, h4{
-font-size: 8px;
-}
 h4{ font-size: 1.8em;  }
+}
 }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
