--- a/test123.html
+++ b/test123.html
@@ -705,12 +705,12 @@ display: none;
 }
 #posts .post .img, 
 #posts .post img{
-height: 48px;
+height: 52px;
 padding-bottom: 0;
 }
 #posts .posts-scrollable{
 width: 100%;
-height: 204px;
+height: 210px;
 flex-shrink: 0;
 overflow-x: auto;
 overflow-y: hidden;
@@ -820,7 +820,7 @@ right: 0;
                     <div class="contents">
                         
                         <div>
-                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Visual Hierachy & Engagement</a></h4>
+                            <h4><a href="https://peteroper.notion.site/Visual-Hierachy-Promoting-Engagement-fd774fcefbc040f49741143d7b6f88ca?pvs=4" title="Visual Hierachy & Promoting Engagement" target="_blank">Hierachy & Engagement</a></h4>
                             <p>Visual Hierachy principle and Engagement techniques.</p>
                         </div>
                         <span class="icn material-icons">chevron_right</span>
@@ -831,7 +831,7 @@ right: 0;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="https://peteroper.notion.site/Advocating-a-Design-Culture-1770b2d30df8473d92cc6fbf4004f2b7?pvs=4" target="_blank">Advocating for a Design Culture</a></h4>
+                            <h4><a href="https://peteroper.notion.site/Design-Ops-isn-t-just-Systems-ac358d9719af4bb7b09a6806f7db9ebb?pvs=4" title="https://peteroper.notion.site/Advocating-a-Design-Culture-1770b2d30df8473d92cc6fbf4004f2b7?pvs=4" target="_blank">Advocating a Design Culture</a></h4>
                             <p>Thoughts regarding team dynamics and growth.</p>
                         </div> 
                         <span class="icn material-icons">chevron_right</span>
