--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@ right: 0;
                         <div><h4>Coming Soon</h4></div>
                     </div>
                 </div>
-                <p class="web-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
+                <p class="webc-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
         </div>
         <!-- showcase ends -->
 
