--- a/test123.html
+++ b/test123.html
@@ -916,7 +916,7 @@ right: 0;
                     <div id="showcase2" class="tab-container">
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                         <div>
-                            <p class="l">Geronigo is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
+                            <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
                             <p>With fresh eyes and a new perspective gained while working as a UX designer I will build on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
                             <p class="l">Objectives</p>
                             <ol>
