--- a/index.html
+++ b/index.html
@@ -886,9 +886,9 @@ right: 0;
                 <h3>Showcase</h3>
                 <nav class="tab-menu">
                     <a href="#showcase1" class="selected">Pulse Football</a>
-                    <!--a href="#">Japanesey</a-->
                     <a href="#showcase2">Adventure Sports</a>
-                    <a href="#showcase3">Kokonotori Navi</a>
+                    <!--a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank">au Usage Support</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank">au Photo Cloud</a-->
                 </nav>
                 <div class="scrollable">
                     <div id="showcase1" class="tab-container tab-selected">
