--- a/test123.html
+++ b/test123.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://peteroper.github.io/portfolio/assets/imgs/icon-og.jpg">
@@ -87,6 +88,9 @@ font-size: 18px;
 line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
+}
+p{
+font-family: 'Raleway';
 }
 .b span{
 font-weight: bold;
@@ -219,6 +223,9 @@ background: #000;
 #showcase2{
 color: #222;
 background-color: #EEAD50;
+}
+#showcase2 div{
+background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 }
 #showcase2 div.hypothesis{
 background-color: #EF8E8C;
@@ -914,7 +921,7 @@ right: 0;
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
                     <div id="showcase2" class="tab-container">
-                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.jpg" />
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                         <div>
                             <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
                             <p>With fresh eyes and a new perspective gained while working as a UX designer I will build on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
