--- a/test123.html
+++ b/test123.html
@@ -80,7 +80,7 @@ $( ".tab-menu a").on( "click", function() {
 /* CORE */
 /*/////////////////////////////////////////////////////////////*/
 *, body{
-font-family: 'Merriweather','Lora';
+font-family: 'Raleway';
 padding: 0;
 margin: 0;
 border: 0;
@@ -88,6 +88,9 @@ font-size: 18px;
 line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
+}
+h1,h2{
+font-family: 'Merriweather','Lora';
 }
 p{
 font-family: 'Raleway';
