--- a/test123.html
+++ b/test123.html
@@ -89,7 +89,7 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
-h1,h2{
+h1,h2,h3,h4,p.l span,p.l{
 font-family: 'Merriweather','Lora';
 }
 p{
