--- a/test123.html
+++ b/test123.html
@@ -228,6 +228,7 @@ color: #222;
 background-color: #EEAD50;
 }
 #showcase2 div{
+color: #FFF;
 background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 }
 #showcase2 div.hypothesis{
