--- a/test123.html
+++ b/test123.html
@@ -92,6 +92,7 @@ overflow: initial;
 h1,h2,h3,h4,p.l span,p.l{
 font-family: 'Merriweather','Lora';
 }
+#showcase p.l,
 p{
 font-family: 'Raleway';
 }
