--- a/test123.html
+++ b/test123.html
@@ -233,7 +233,8 @@ color: #FFF;
 background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 }
 #showcase2 div.hypothesis{
-background-color: #EF8E8C;
+color: #000;
+background-color: #FAA525;
 }
 .header{
 background-color: #346672;
