--- a/test123.html
+++ b/test123.html
@@ -234,7 +234,7 @@ background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 }
 #showcase2 div.hypothesis{
 color: #000;
-background-color: #FAA525;
+background: #FAA525;
 }
 .header{
 background-color: #346672;
