--- a/test123.html
+++ b/test123.html
@@ -900,7 +900,7 @@ right: 0;
                 <nav class="tab-menu">
                     <a href="#showcase1" class="selected">Pulse Football</a>
                     <!--a href="#">Japanesey</a-->
-                    <a href="#showcase2">Adventure Sports</a>
+                    <a href="#showcase2">Adventure Card</a>
                     <a href="#showcase3">Kokonotori Navi</a>
                 </nav>
                 <div class="scrollable">
