--- a/test123.html
+++ b/test123.html
@@ -680,8 +680,7 @@ padding-bottom: 4px;
 #showcase .scrollable{
 height: 424px!important;
 }
-#showcase2 div p,
-#showcase1 div p{
+#showcase .tab-container div p{
 width: 343px;
 }
 #showcase1 img:first-of-type{
