--- a/test123.html
+++ b/test123.html
@@ -940,10 +940,9 @@ right: 0;
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg" />
                         <div class="hypothesis">
-                            <p class="l">Football at your finger tips</p>
-                            <p>Over the last 7-8 years I have noticed football related products becoming more sophisticated. Notable applications would include Fantasy Premier League, Transfermarkt and One Football.</p>
-                            <p>Although One Football is pushing boundaries, football news still feels trapped in an outdated media format, where information is spread across multiple articles.</p>
-                            <p>Thanks to the advent of AI, it is now possible to aggregate and combine football information to cater to users' specific needs. This includes providing comprehensive analysis, data insights, and an all-in-one football experience.</p>
+                            <p class="l">Information architecture and value proposition are 2 key aspects I focussed on when re imagining the UX for adventure cards.</p>
+                            <p>The user journey for event bookings includes search, filter, purchase and post purchase planning. Different variables such as location, price, restrictions and availability also need to be factored in.</p>
+                            <p>Value proposition is important due to a competitive market. However when re-evaluting the UX and UI I realised this requirement reduced usability. Therefore I aimed to tie usability to the value proposition and apply different techniques to build brand awareness.</p>
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.3.jpg" />
                     </div>
