--- a/test123.html
+++ b/test123.html
@@ -237,6 +237,10 @@ background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 color: #000;
 background: #FAA525;
 }
+#showcase2 div.research{
+color: #FFF;
+background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
+}
 .header{
 background-color: #346672;
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-batsu.png);
@@ -945,6 +949,16 @@ right: 0;
                             <p>Value proposition is important due to a competitive market. However when re-evaluting the UX and UI I realised this requirement reduced usability. Therefore I aimed to tie usability to the value proposition and apply different techniques to build brand awareness.</p>
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.3.jpg" />
+                        <div class="research">
+                            <p class="l">In addition to usability testing of features and flows the following areas would give valuable insights to user preference and recall.
+                            <ol>
+                                <li>UX Wording - Gather feedback from users on the understanding and impact of different titles and call-to-action wording.</li>
+                                <li>Activity Images - Analyze user responses to identify patterns and trends in image preferences, helping to optimize the selection of activity images.</li>
+                                <li>Value Proposition - distribute surveys to a broader user base to gather quantitative data on how users perceive the app's value proposition</li>
+                                <li>Brand Awareness - During usability testing sessions, assign users specific tasks that involve finding the product again in the future.</li>
+                            </ol>
+                        </div>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
                     </div>
                     <div id="showcase3" class="tab-container">
                         <div><h4>Coming Soon</h4></div>
