--- a/test123.html
+++ b/test123.html
@@ -248,12 +248,12 @@ background-repeat: no-repeat;
 background-position: 50% 0;
 }
 .header div div{
-background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape-batsu.png);
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
 background-repeat: repeat-x;
 background-position: 0 100%;
 }
 #contact > div{
-background-image: url(https://peteroper.github.io/portfolio/assets/imgs/contact-shape-batsu.png);
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/contact-shape.png);
 background-repeat: repeat-x;
 background-position: 0 0;
 }
@@ -549,9 +549,11 @@ overflow: hidden;
 display: none;
 }
 .content,
-#contact > div,
+#contact > div{
+    padding-left: 40px!important;    
+}
 .header div div{
-   padding-left: 40px!important;
+   padding-left: 324px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 .header{
@@ -564,10 +566,10 @@ height: 275px;
 position: relative;
 }
 .header .img{
-margin-top: -124px;
 position: absolute;
+left: 12px;
 top: 50%;
-right: 0;
+margin-top: -124px;
 }
 .header{
 background-position: 100% 0;
