--- a/test123.html
+++ b/test123.html
@@ -553,7 +553,7 @@ display: none;
     padding-left: 40px!important;    
 }
 .header div div{
-   padding-left: 324px!important;
+   padding-left: 278px!important;
 }
 /*/////////////////////////////////////////////////////////////*/
 .header{
@@ -569,7 +569,8 @@ position: relative;
 position: absolute;
 left: 12px;
 top: 50%;
-margin-top: -124px;
+margin-top: -100px;
+scale: 80%;
 }
 .header{
 background-position: 100% 0;
